# cpp-win

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
data/: active_ip.txt  config.yaml  untitled.ui
headers/: test.h
pytest/: main.py  scan_net.py  xhs_auto_write.py
src/: GlobalVariable.h  NewMainWindow.ui  SceneSelectionWindow.ui  application.cpp  application.hpp  asio_network.cpp  asio_network.hpp  base_headers.cpp  base_headers.hpp  configuration.cpp  configuration.hpp  counter_event.cpp  counter_event.hpp  libevent.cpp  libevent.hpp  logs.txt  main.cpp  multi_thread.cpp  multi_thread.hpp  mylog.txt  onnxruntime.cpp  onnxruntime.hpp  openvino.cpp  openvino.hpp  temp.cpp  temp.h
src/state_machine/: PDTask.cpp  PDTask.h  StateMachine.cpp  StateMachine.h
